add css header trang chủ

--- a/admin/admin.css
+++ b/admin/admin.css
@@ -4,10 +4,10 @@
     margin: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-
+/* 
 .container {
             
-}
+} */
 
 ul li {
     padding: 0;
