--- a/trangchu/trangchu.css
+++ b/trangchu/trangchu.css
@@ -12,22 +12,22 @@
 .top-header{
     background-color: #0c6;
     width: 100%;
-    padding: 5px 250px;
+    padding: 5px 0;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 .logo{
-    margin-right: 150px;
+    margin-right: 155px;
     font-family: 'roboto';
     font-weight: bold;
-    font-size: 30px;
+    font-size: 35px;
     color: white;
     text-decoration: none;
 }
 .top-header input{
-    width: 430px;
-    height: 30px;
+    width: 450px;
+    height: 35px;
 }
 .taikhoan-giohang{
     margin-left: 130px;
@@ -56,7 +56,6 @@
 .danhmucsp{
     background-color: #f2f2f2;
     width: 100%;
-    padding: 0 250px;
     display: flex;
     justify-content:center;
     align-items: center;
@@ -65,22 +64,23 @@
     font-size: 14px;
     padding: 5px 5px;
     background-color: #fff;
-    margin-right: 700px;
+    margin-right: 730px;
 }
 /* END Danhmucsp */
 
 .menu-banner{
-    padding: 0 200px;
+    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 0 auto;
+    margin-top: 10px;
+    margin-bottom: 20px;
 }
 .menu-sp ul{
     list-style-type: none;
-    min-height: 400px;
-    width: 210px;
-    top: 32px;
-    left: 0;
+    min-height: 377px;
+    width: 230px;
     text-align: left;
     margin: 0;
     padding: 0;
@@ -88,12 +88,12 @@
     background-color: #fff;
 }
 .menu-sp ul li{
-    padding: 10px 5px;
+    padding: 10px 0;
 }
 .menu-sp ul a{
     text-decoration: none;
     color: #000;
-    font-size: small; 
+    font-size: 15px; 
 }
 .menu-sp ul li:hover{
     background-color: #0c6;
@@ -104,11 +104,12 @@
 /* END HEADER */
 
 main{
-    width: 1000px;
+    width: 1100px;
     height: auto;
-    display: table;
+    display: flex;
     justify-content: center;
-    margin: 0 250px;
+    align-items: center;
+    margin: 0 auto;
 }
 .row-sp{
     width: 100%;
@@ -137,6 +138,79 @@ main h2 {
 .seeall:hover{
     color: #0c6;
     text-decoration: underline;
+}
+table tr{
+    width: 1100px;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+}
+.item-sp{
+    margin-left: 40px;
+    margin-right: 40px;
+    text-align: center;
+}
+.item-sp img{
+    margin-top: 30px;
+}
+.item-sp .ten-sp{
+    text-decoration: none;
+    color: #0c6;
+    font-size: 16px;
+}
+.item-sp .ten-sp:hover{
+    color: rgb(223, 0, 223);
+}
+.item-sp .tac-gia{
+    text-decoration: none;
+    color: #0c6;
+    font-size: 12px;
+    font-weight: 700;
+}
+.item-sp .tac-gia:hover{
+    color: rgb(52, 0, 52);
+}
+.item-sp .price-sp{
+    font-weight: bold;
+}
+
+/* END MAIN */
+
+footer{
+    width: 1100px;
+    height: auto;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+    margin-top: -90px;
+    margin-bottom: 100px;
+}
+.logo-footer{
+    font-weight: bold;
+    font-size: 30px;
+    color: #0c6;
+    text-decoration: none;
+}
+.column-footer{
+    margin: 0 20px;
+    list-style-type: none;
+}
+.column-footer h1{
+    font-weight: 700;
+    font-size: 20px;
+    margin-bottom: 15px;
+}
+.column-footer li a{
+    text-decoration: none;
+    color: #000;
+}
+.column-footer li a:hover{
+    text-decoration: underline;
+}
+.column-footer i{
+    font-size: 25px;
 }
 
 
